--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ body {
     <div class="container">
                     <div class="offer-card" data-id="offer-4">
                     <div class="offer-content">
-				  <h2>Home Efficiency Program</h2>
+				  <h2>Home Protection Plans</h2>
 				  <p>Optimize your home’s energy usage with our expert tips and tools.</p>
 				  <p><b>Say:</b> We'd love to tell you about how we can make your life easier and safer! When your fridge, stove, air conditioner, furnace or any other key appliances break down, life gets disrupted. It's up to you to find a reliable repair service and pay unexpected one-off repair costs.</p>
 				  
