--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ body {
 				  <div class="offer-meta">
 				    <span class="stars" aria-label="4 out of 5 stars">★★★★☆</span>
 				  </div>
-				  <br><a href="https://utilitiesspa.nacx-utilities-chelm.usdemo.hybris.com/spartacusstorefront/utilitiesspa/en/USD/c/accessories" class="offer-button">Learn More</a></br>
+				  <br><a href="https://getstarted.oncourse.com/nsp/" class="offer-button">Learn More</a></br>
 				</div>
             </div>
             <div class="offer-card" data-id="offer-0">
