--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@ const scenarios = {
       <div class="message-strip message-neutral has-tooltip">
         <span>2. Home Protection Plan</span>
         <div class="tooltip-box"><b>SAY: </b>Given the sensitive condition in your home, it may give you peace of mind by enrolling in our Home Protection Plans that gives you priority scheduling for home repairs with no out of pocket costs. Would you like me to send some information?</div>
-        <!--<button class="message-button" onclick="window.open('https://ssamyaccount.cxlive.ai/Portal/NotificationPreferences', '_blank')">Go</button>-->
+        <br><a href="https://utilitiesspa.nacx-utilities-chelm.usdemo.hybris.com/spartacusstorefront/utilitiesspa/en/USD/c/warranty" class="offer-button">Learn More</a></br>
       </div>
     `,
     recommendedPrograms: `
