--- a/index.html
+++ b/index.html
@@ -444,16 +444,20 @@ body {
       margin-top: 1rem;
     }
     .feedback button {
-      background-color: #ffffff;
-      border: 1px solid #ccc;
-      border-radius: 0.5rem;
+      background-color: #0a6ed1;
+      border: none;
+      border-radius: 0.25rem;
       padding: 0.5rem 1rem;
       cursor: pointer;
       font-size: 1rem;
+      color: #ffffff;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
     .feedback button:hover {
-      background-color: #e0f0ff;
-      border-color: #0a6ed1;
+      background-color: #0854a0;
     }
 
   </style>
