--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ const scenarios = {
   "US00016958": {
     contactPredictions: `
       <div class="message-strip message-success"><span>Recent Usage Spikes - likely due to Winter heating</span></div>
-      <div class="message-strip message-neutral"><span>Update Contact Info</span></div>
+      <div class="message-strip message-warning"><span>Update Contact Info</span></div>
     `,
     nextBestActions: `
       <div class="message-strip message-success has-tooltip">
@@ -915,7 +915,7 @@ const scenarios = {
       </div>
       <div class="message-strip message-neutral has-tooltip">
         <span>2. Recommend Automatic Payments</span>
-        <div class="tooltip-box"><b>SAY: </b>We can enroll you in eBill so you’ll get your bill emailed and manage it online.</div>
+        <div class="tooltip-box"><b>SAY: </b>We can enroll you in eBill so you’ll get your bill emailed and manage it online. It's a great way to set it and forget it.</div>
         <!--<button class="message-button" onclick="window.open('https://ssamyaccount.cxlive.ai/Portal/NotificationPreferences', '_blank')">Go</button>-->
       </div>
       <div class="message-strip message-success has-tooltip">
@@ -937,8 +937,8 @@ const scenarios = {
         <div class="object-item">
           <div class="object-details">
             <div class="object-title">AutoPay</div>
-            <div class="object-description">Free LEDs and water-saving devices mailed to home.</div>
-            <div class="object-status status-positive">Great Compliment to Budget</div>
+            <div class="object-description">Set it and Forget it way to pay your monthly bill.</div>
+            <div class="object-status status-warning">Great Compliment to Budget</div>
           </div>
           <!--<button class="enroll-button">Claim</button>-->
         </div>
