--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ const scenarios = {
   "US00016958": {
     contactPredictions: `
       <div class="message-strip message-success"><span>Recent Usage Spikes - likely due to Winter heating</span></div>
-      <div class="message-strip message-warning"><span>Update Contact Info</span></div>
+      <div class="message-strip message-error"><span>High Bill Investigation</span></div>
     `,
     nextBestActions: `
       <div class="message-strip message-success has-tooltip">
