--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ const scenarios = {
   },
   "US00016958": {
     contactPredictions: `
-      <div class="message-strip message-success"><span>Recent Usage Spikes - likely due to Winter heating</span></div>
+      <div class="message-strip message-success"><span>Recent Usage Spikes - due to Winter heating</span></div>
       <div class="message-strip message-error"><span>High Bill Investigation</span></div>
     `,
     nextBestActions: `
