--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ body {
   <div class="analytical-card">
     <div class="analytical-header">
       <div class="analytical-title">Consumption Insights</div>
-      <div>Year to Date (kWh)</div>
+      <div>Year to Date</div>
     </div>
     <div class="chart-container">
       <canvas id="consumptionChart"></canvas>
