--- a/index.html
+++ b/index.html
@@ -578,10 +578,10 @@ body {
 
     <div class="object-item">
       <div class="object-details">
-        <div class="object-title">Final Notice Issued</div>
+        <div class="object-title">Disconnect Notice Issued</div>
         <div class="object-description">10 Day Turn Off Notice issued - pending disconnection.</div>
         <div><strong>Status:</strong> <span class="object-status status-negative">Active</span></div>
-        <div><strong>Date:</strong> 03/01/2025</div>
+        <div><strong>Date:</strong> 05/24/2025</div>
       </div>
     </div>
 
@@ -590,7 +590,7 @@ body {
         <div class="object-title">Early Reminder Call - TF Notice Warning</div>
         <div class="object-description">Autodialer Warning TF Notice to be issued</div>
         <div><strong>Status:</strong> <span class="object-status status-information">Unpaid</span></div>
-        <div><strong>Date:</strong> 02/28/2025</div>
+        <div><strong>Date:</strong> 05/17/2025</div>
       </div>
     </div>
 
@@ -972,7 +972,7 @@ const scenarios = {
       <div class="message-strip message-neutral has-tooltip">
         <span>3. Home Protection Plan</span>
         <div class="tooltip-box"><b>SAY: </b>Given the sensitive condition in your home, it may give you peace of mind by enrolling in our Home Protection Plans that gives you priority scheduling for home repairs with no out of pocket costs. Would you like me to send some information?</div>
-        <br><a href="https://utilitiesspa.nacx-utilities-chelm.usdemo.hybris.com/spartacusstorefront/utilitiesspa/en/USD/c/warranty" class="enroll-button">Learn More</a></br>
+        <br><a href="https://utilitiesspa.nacx-utilities-chelm.usdemo.hybris.com/spartacusstorefront/utilitiesspa/en/USD/c/warranty" class="enroll-button">More</a></br>
       </div>
     `,
     recommendedPrograms: `
