--- a/index.html
+++ b/index.html
@@ -995,6 +995,48 @@ const scenarios = {
         </div>
       </div>
     `
+  },
+	"US00016105": {
+    contactPredictions: `
+      <div class="message-strip message-success has-tooltip"><span>Outstanding Balance due - $75.00</span></div>
+      <div class="message-strip message-nuetral"><span>Request Payment Arrangement</span></div>
+      <div class="message-strip message-neutral"><span>Process Payment</span></div>
+    `,
+    nextBestActions: `
+      <div class="message-strip message-success has-tooltip">
+        <span>1. Recommend And Take Payment</span>
+        <div class="tooltip-box"><b>SAY: </b>We noticed you recently were looking for How to enroll in Medical Protection on your account. Is that correct? I can generate a Case to get the process started if you like.</div>
+      </div>
+        <div class="message-strip message-success has-tooltip">
+        <span>2. Recommend AutoPay</span>
+        <div class="tooltip-box"><b>SAY: </b>Based on your past due balance, Payment Arrangements are available if you're unable to pay the full amount.</div>
+      </div>
+      <div class="message-strip message-neutral has-tooltip">
+        <span>3. Payment Arrangement - Eligible</span>
+        <div class="tooltip-box"><b>SAY: </b>Given the sensitive condition in your home, it may give you peace of mind by enrolling in our Home Protection Plans that gives you priority scheduling for home repairs with no out of pocket costs. Would you like me to send some information?</div>
+        <br><a href="https://utilitiesspa.nacx-utilities-chelm.usdemo.hybris.com/spartacusstorefront/utilitiesspa/en/USD/c/warranty" class="enroll-button">More</a></br>
+      </div>
+    `,
+    recommendedPrograms: `
+      <div class="object-display">
+        <div class="object-item">
+          <div class="object-details">
+            <div class="object-title">Home Protection Plan</div>
+            <div class="object-description">Protects against shutoffs from Nov–Mar if eligible.</div>
+            <div class="object-status status-positive">Priority Scheduling</div>
+          </div>
+          <a href="https://utilitiesspa.nacx-utilities-chelm.usdemo.hybris.com/spartacusstorefront/utilitiesspa/en/USD/c/warranty" class="enroll-button">Learn More</a>
+        </div>
+        <div class="object-item">
+          <div class="object-details">
+            <div class="object-title">Energy Savings Kit</div>
+            <div class="object-description">Free LEDs and water-saving devices mailed to home.</div>
+            <div class="object-status status-positive">Free</div>
+          </div>
+          <button class="enroll-button">Claim</button>
+        </div>
+      </div>
+    `
   }
 };
 
