--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ body {
   <div class="card">
     <h3>Contact Prediction</h3>
     <div class="message-strip message-success">
-        <span>Outstanding Balance - Payment Assistance</span>
+        <span>Disconnect Notice - Payment Assistance</span>
         <!--<button class="message-button" onclick="window.open('https://example.com/budget', '_blank')">Go</button>-->
       </div>
       
@@ -581,7 +581,7 @@ body {
         <div class="object-title">Disconnect Notice Issued</div>
         <div class="object-description">10 Day Turn Off Notice issued - pending disconnection.</div>
         <div><strong>Status:</strong> <span class="object-status status-negative">Active</span></div>
-        <div><strong>Date:</strong> 05/24/2025</div>
+        <div><strong>Date:</strong> 06/02/2025</div>
       </div>
     </div>
 
@@ -590,7 +590,7 @@ body {
         <div class="object-title">Early Reminder Call - TF Notice Warning</div>
         <div class="object-description">Autodialer Warning TF Notice to be issued</div>
         <div><strong>Status:</strong> <span class="object-status status-information">Unpaid</span></div>
-        <div><strong>Date:</strong> 05/17/2025</div>
+        <div><strong>Date:</strong> 05/30/2025</div>
       </div>
     </div>
 
@@ -599,7 +599,7 @@ body {
         <div class="object-title">Day 3 - Digital LPC Reminder</div>
         <div class="object-description">Reminder sent via customer preferred Email channel. LPC of $5.00 applied.</div>
         <div><strong>Status:</strong> <span class="object-status status-information">Unpaid</span></div>
-        <div><strong>Date:</strong> 02/15/2025</div>
+        <div><strong>Date:</strong> 05/28/2025</div>
       </div>
     </div>
     </div>
