--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@ const scenarios = {
       </div>
       <div class="message-strip message-neutral has-tooltip">
         <span>2. Recommend Automatic Payments</span>
-        <div class="tooltip-box"><b>SAY: </b>We can enroll you in eBill so you’ll get your bill emailed and manage it online. It's a great way to set it and forget it.</div>
+        <div class="tooltip-box"><b>SAY: </b>We can set your account up on automatic payments, which is a great way to set it and forget it.</div>
         <!--<button class="message-button" onclick="window.open('https://ssamyaccount.cxlive.ai/Portal/NotificationPreferences', '_blank')">Go</button>-->
       </div>
       <div class="message-strip message-success has-tooltip">
