--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ body {
   <div class="card">
     <h3>Contact Prediction</h3>
     <div class="message-strip message-success">
-        <span>Disconnect Notice - Payment Assistance</span>
+        <span>Disconnect Warning Call - Payment Assistance</span>
         <!--<button class="message-button" onclick="window.open('https://example.com/budget', '_blank')">Go</button>-->
       </div>
       
@@ -578,10 +578,10 @@ body {
 
     <div class="object-item">
       <div class="object-details">
-        <div class="object-title">Disconnect Notice Issued</div>
+        <div class="object-title">Disconnect Warning Call</div>
         <div class="object-description">10 Day Turn Off Notice issued - pending disconnection.</div>
         <div><strong>Status:</strong> <span class="object-status status-negative">Active</span></div>
-        <div><strong>Date:</strong> 06/02/2025</div>
+        <div><strong>Date:</strong> 06/18/2025</div>
       </div>
     </div>
 
@@ -590,7 +590,7 @@ body {
         <div class="object-title">Early Reminder Call - TF Notice Warning</div>
         <div class="object-description">Autodialer Warning TF Notice to be issued</div>
         <div><strong>Status:</strong> <span class="object-status status-information">Unpaid</span></div>
-        <div><strong>Date:</strong> 05/30/2025</div>
+        <div><strong>Date:</strong> 06/10/2025</div>
       </div>
     </div>
 
