--- a/index.html
+++ b/index.html
@@ -1029,8 +1029,8 @@ const scenarios = {
         </div>
         <div class="object-item">
           <div class="object-details">
-            <div class="object-title">Energy Savings Kit</div>
-            <div class="object-description">Free LEDs and water-saving devices mailed to home.</div>
+            <div class="object-title">Water Savings Kit</div>
+            <div class="object-description">Free Low Flow shower heads and water-saving devices mailed to home.</div>
             <div class="object-status status-positive">Free</div>
           </div>
           <button class="enroll-button">Claim</button>
