--- a/index.html
+++ b/index.html
@@ -472,14 +472,14 @@ body {
 <div id="overview" class="tab-content active">
   <div class="page-grid">
 
-  <!--<div class="card">
-    <h3>Contact Prediction</h3>
+  <div class="card">
+    <!--<h3>Contact Prediction</h3>
     <div class="message-strip message-success">
         <span>Disconnect Warning Call - Payment Assistance</span>
         <button class="message-button" onclick="window.open('https://example.com/budget', '_blank')">Go</button>
       </div>-->
       
-      <<div class="message-strip message-success">
+      <div class="message-strip message-success">
         <span>Adjust Payment Arrangement</span>
         <button class="message-button" onclick="window.open('https://example.com/payment', '_blank')">Go</button>
       </div>
