--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@ body {
   <div class="page-grid">
 
   <div class="card">
-    <!--<h3>Contact Prediction</h3>
+    <h3>Contact Prediction</h3>
     <div class="message-strip message-success">
         <span>Disconnect Warning Call - Payment Assistance</span>
-        <button class="message-button" onclick="window.open('https://example.com/budget', '_blank')">Go</button>
-      </div>-->
+       <!-- <button class="message-button" onclick="window.open('https://example.com/budget', '_blank')">Go</button>-->
+      </div>
       
       <div class="message-strip message-success">
         <span>Adjust Payment Arrangement</span>
