--- a/index.html
+++ b/index.html
@@ -481,10 +481,10 @@ body {
       
      <!-- <div class="message-strip message-success">
         <span>Adjust Payment Arrangement</span>
-        <!--<button class="message-button" onclick="window.open('https://example.com/payment', '_blank')">Go</button>-->
+        <!--<button class="message-button" onclick="window.open('https://example.com/payment', '_blank')">Go</button>
       </div>-->
       
-      <div class="message-strip message-warning">
+      <div class="message-strip message-informational">
         <span>Make Payment</span>
         <!--<button class="message-button" onclick="window.open('https://example.com/ebill', '_blank')">Go</button>-->
       </div>
