--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ body {
         <!--<button class="message-button" onclick="window.open('https://example.com/payment', '_blank')">Go</button>
       </div>-->
       
-      <div class="message-strip message-informational">
+      <div class="message-strip message-neutral">
         <span>Make Payment</span>
         <!--<button class="message-button" onclick="window.open('https://example.com/ebill', '_blank')">Go</button>-->
       </div>
@@ -497,7 +497,7 @@ body {
         <!--<button class="message-button" onclick="window.open('https://ssamyaccount.cxlive.ai/Portal/PayBill', '_blank')">Go</button>-->
       </div>
       
-      <div class="message-strip message-warning has-tooltip">
+      <div class="message-strip message-neutral has-tooltip">
         <span>2. Recommend Installment Plan - Eligible (No Defaults)</span>
         <div class="tooltip-box"><b>SAY: </b>Payment Arrangement may be offered, but 1 default exists. If broken, no future arrangements will be allowed.<br><br>Recommend making payment in full as soon as possible. Inquire if qualifies for Low Income Assistance.</div>
         <!--<button class="message-button" onclick="window.open('https://ssamyaccount.cxlive.ai/Portal/AutoPay', '_blank')">Go</button>-->
